--- a/submissions/whitlock/index.html
+++ b/submissions/whitlock/index.html
@@ -262,7 +262,7 @@
                 .attr('cx', function(d) { return xPointScale(d[xVal]); })	// x-coordinate
                 .attr('cy', function(d) { return yPointScale(d[yVal]); })	// y-coordinate
                 .style('fill','blue')									// color
-                .attr('r', 5)											// radius
+                .attr('r', 0)											// radius
                 .on('click', function(d, i) {
                     d3.select('#scatterLabel')[0][0].innerHTML = '(X,Y): (' + d[xVal] + ',' + d[yVal] + ')';
                 })
@@ -273,7 +273,12 @@
                 .on('mouseout', function() {
                     d3.select(this).attr('r', 5);
                     d3.select(this).style('fill', 'blue');
-                });
+                })
+                .transition()
+                .duration(1000)
+                .attr('r', 5);
+            point.append('svg:title')
+                 .text(function(d) { return '(' + d['x'] + ',' + d['y'] + ')'; });
             
             // Put your part five code here ***********************
             var compareChart = document.createElement('div');
@@ -318,6 +323,4 @@
             
     </script>
 </body>
-
-
 </html>
